--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>{% if paginator and paginator.page > 1 %}Posts Page {{ paginator.page }}{% else %}{{ page.title }}{% endif %} | Bryce Fisher-Fleig</title>
 
-  <link href="/css/print.css" media="print" rel="stylesheet" type="text/css">
+  <link href="/css/screen.css" media="print" rel="stylesheet" type="text/css">
   <link href="/favicon.ico" rel="shortcut icon">
 
   <link rel="dns-prefetch" href="//ssl.google-analytics.com">
