Fix typo in scss

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "_reset.scss"
+@import "_reset.scss";
 @import "_pygments.fruity.scss";
 @import "_variables.scss";
 @import "_video-js.scss";
