--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,10 @@
 </head>
 <body{% if page.css_id %} id="{{ page.css_id }}"{% endif %}>
   <nav id="header">
-    <a href="/" id="logo"><img src="/img/logo.png" alt="B" /></a>
-    <h2 id="site-title">Bryce Fisher-Fleig</h2>
+    <a href="/" id="logo">
+      <img src="/img/logo.png" alt="B" />
+      <h2 id="site-title">Bryce Fisher-Fleig</h2>
+    </a>
 
     <a id="flattr-header" href="https://flattr.com/submit/auto?user_id=brycefisherfleig&amp;title={{ page.title | uri_escape }}&amp;url=https%3A%2F%2Fbryce.fisher-fleig.org{{ page.url | uri_escape }}"><img src="/img/flattr-badge-large.png" alt="Flattr this"></a>
   </nav>
