Playing with pencil icon in header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
     </a>
 
     <a id="flattr-header" href="https://flattr.com/submit/auto?user_id=brycefisherfleig&amp;title={{ page.title | uri_escape }}&amp;url=https%3A%2F%2Fbryce.fisher-fleig.org{{ page.url | uri_escape }}"><img src="/img/flattr-badge-large.png" alt="Flattr this"></a>
+
+    <a id="edit-page" title="Edit this page on Github" href="https://github.com/brycefisher/brycefisher.github.io-jekyll/edit/master/{{ page.path }}">&#xE0A3;</a>
   </nav>
 
   {{content}}
