--- a/css/screen.css
+++ b/css/screen.css
@@ -159,6 +159,35 @@ table {
 
 h1, h2, h3, h4, h5, h6 { font-weight: bold; color: #000; }
 
+@font-face {
+  font-family: 'Icons';
+  src: url('../fonts/open-iconic.eot');
+  src: url('../fonts/open-iconic.eot?#iconic-sm') format('embedded-opentype'), url('../fonts/open-iconic.woff') format('woff'), url('../fonts/open-iconic.ttf') format('truetype'), url('../fonts/open-iconic.otf') format('opentype'), url('../fonts/open-iconic.svg#iconic-sm') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+#edit-page { display: none; }
+
+@media screen and (min-width:800px) {
+  #edit-page {
+    display: block;
+    font-family: 'Icons';
+    text-align: center;
+    color: white;
+    background: black;
+    position: fixed;
+    bottom: 1em;
+    right: 1em;
+    border-radius: 50%;
+    width: 1.75em;
+    height: 1.75em;
+  }
+  #edit-page:hover {
+    text-shadow: unset;
+    background: #1a1af1;
+  }
+}
 
 /* --------- Typography ----------------- */
 html { font-family: 'liberation_serifregular'; font-size: 16px; line-height: 30px; color: #333; }
@@ -217,7 +246,7 @@ video, .video, .video .vjs-tech { display:block; position:static; margin-bottom:
 #site-title { font-size: 24px; line-height: 36px; float: left;  }
 #header p, #site-footer p { font-size: 12px;  line-height:36px; }
 #header { position:fixed; width:100%; top:0; z-index:1000;}
-#flattr-header, #flattr-footer { display:none; position: absolute; right: 3px; top: 9px; }
+#flattr-header, #flattr-footer { display:none; position: absolute; right: 3px; top: 9px; z-index: 10; }
 #site-footer { margin-top: 24px; position: relative; }
 
 
